refactor: Update createExercise method to support multiple parts
Modify the `createExercise` adding multiple body parts
to an exercise